update TEST_ISSUER in local_tests.env

--- a/config/local_tests.env
+++ b/config/local_tests.env
@@ -1,5 +1,5 @@
 # General test data
-TEST_ISSUER=sso.reframedapp.com
+TEST_ISSUER=sso
 TEST_APP_ID=test-app-id
 TEST_VERIFICATION_URL=reframedapp.com/verify-email/token=
 TEST_CONFIRM_CHANGE_PASSWORD_URL=reframedapp.com/password/change?token=
