--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -48,6 +48,22 @@ sql:
           - db_type: "pg_catalog.timestamptz"
             go_type: "time.Time"
 
+  - name: rbac
+    schema: "migrations"
+    queries: "internal/infrastructure/storage/rbac/postgres/query"
+    engine: "postgresql"
+    gen:
+      go:
+        package: "sqlc"
+        out: "internal/infrastructure/storage/rbac/postgres/sqlc"
+        sql_package: "pgx/v5"
+        emit_db_tags: true
+        emit_interface: true
+        emit_empty_slices: true
+        overrides:
+          - db_type: "pg_catalog.timestamptz"
+            go_type: "time.Time"
+
   - name: user
     schema: "migrations"
     queries: "internal/infrastructure/storage/user/postgres/query"
