--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,49 +1,15 @@
+version: "2"
 run:
-  timeout: 5m
   tests: false
-linters-settings:
-  dogsled:
-    max-blank-identifiers: 2
-  gocognit:
-    min-complexity: 20
-  goconst:
-    min-occurrences: 4
-  gofumpt:
-    extra-rules: true
-  lll:
-    line-length: 155
-    tab-width: 1
-  nestif:
-    min-complexity: 4
-  staticcheck:
-    checks:
-      - all
-      - "-SA1029"
-  sloglint:
-    args-on-sep-lines: true
-  testpackage:
-    skip-regexp: "(whitebox)_test\\.go"
-  wsl:
-    strict-append: true
-    allow-assign-and-anything: false
-    allow-multiline-assign: false
-    allow-cuddle-declarations: true
-    allow-trailing-comment: false
-    force-case-trailing-whitespace: 0
-    force-err-cuddling: true
-    allow-separated-leading-comment: false
 linters:
-  disable-all: true
+  default: none
   enable:
     - dogsled
     - errcheck
     - gochecknoinits
     - gocognit
-    - gocritic
     - goconst
-    - gofmt
-    - gofumpt
-    - gosimple
+    - gocritic
     - gocyclo
     - ineffassign
     - lll
@@ -54,35 +20,85 @@ linters:
     - sloglint
     - staticcheck
     - testpackage
-    - unused
     - unconvert
     - unparam
+    - unused
     - wsl
-
-issues:
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - revive
-        - wsl
-        - unused
-        - revive
-    - path: api_tests
-      linters:
-        - unused
-        - revive
-    - linters:
-        - wsl
-      text: "only one cuddle assignment allowed before if statement"
-    - linters:
-        - wsl
-      text: "if statements should only be cuddled with assignments"
-    - linters:
-        - wsl
-      text: "assignments should only be cuddled with other assignments"
-    - linters:
-        - wsl
-      text: "return statements should not be cuddled if block has more than two lines"
-    - linters:
-        - revive
-      text: "unused-parameter: parameter 'info' seems to be unused, consider removing or renaming it as _"
+  settings:
+    dogsled:
+      max-blank-identifiers: 2
+    gocognit:
+      min-complexity: 20
+    goconst:
+      min-occurrences: 4
+    lll:
+      line-length: 155
+      tab-width: 1
+    nestif:
+      min-complexity: 4
+    sloglint:
+      args-on-sep-lines: true
+    staticcheck:
+      checks:
+        - all
+        - -SA1029
+    testpackage:
+      skip-regexp: (whitebox)_test\.go
+    wsl:
+      strict-append: true
+      allow-assign-and-anything: false
+      allow-multiline-assign: false
+      force-case-trailing-whitespace: 0
+      allow-trailing-comment: false
+      allow-separated-leading-comment: false
+      allow-cuddle-declarations: true
+      force-err-cuddling: true
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - linters:
+          - revive
+          - unused
+          - wsl
+        path: _test\.go
+      - linters:
+          - revive
+          - unused
+        path: api_tests
+      - linters:
+          - wsl
+        text: only one cuddle assignment allowed before if statement
+      - linters:
+          - wsl
+        text: if statements should only be cuddled with assignments
+      - linters:
+          - wsl
+        text: assignments should only be cuddled with other assignments
+      - linters:
+          - wsl
+        text: return statements should not be cuddled if block has more than two lines
+      - linters:
+          - revive
+        text: 'unused-parameter: parameter ''info'' seems to be unused, consider removing or renaming it as _'
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - gofumpt
+  settings:
+    gofumpt:
+      extra-rules: true
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
