refactor: integrate golib/config for configuration management
- Replace viper-based config with github.com/rshelekhov/golib/config
- Migrate from .env files to YAML configuration
- Update config structure across all modules
- Remove deprecated .env.example files
- Add config_example.yaml and local_tests.yaml
- Update build and test workflows
- Improve configuration validation and defaults

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -51,10 +51,10 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
-      - name: Create .env file
+      - name: Create config file
         run: |
           set -x
-          echo "${{ secrets.ENV_CONFIG_TEST }}" > ./config/.env
+          echo "${{ secrets.CONFIG_TEST_YAML }}" > ./config/config.yaml
 
       - name: Create config with grpc methods
         run: |
