feat: add golib observability integration
- Update go.mod and go.sum with golib dependency
- Add observability configuration in config_example.yaml
- Update server settings to support observability config
- Add app settings configuration structure
- Update main applications (sso, register_client) to use new observability setup

--- a/config/config_example.yaml
+++ b/config/config_example.yaml
@@ -1,8 +1,13 @@
 # SSO Configuration in YAML format
 # This file will be automatically found by config loader
 
-# Application environment
-AppEnv: "local"
+# App settings
+App:
+  Env: "local"
+  ServiceName: "sso"
+  ServiceVersion: "1.0.0"
+  EnableMetrics: true
+  OTLPEndpoint: "http://localhost:4317"
 
 # gRPC Server settings
 GRPCServer:
