Fix bug: Local Testing Endpoint Mismatch

--- a/config/config.ci.yaml
+++ b/config/config.ci.yaml
@@ -74,6 +74,7 @@ KeyStorage:
     PrivateKeyPath: "keys/"
     Endpoint: "localhost:9000"
     ForcePathStyle: true
+    DisableSSL: true # For MinIO
 
 # Mail service configuration
 MailService:
