--- a/config/config.docker.yaml
+++ b/config/config.docker.yaml
@@ -80,6 +80,7 @@ KeyStorage:
     PrivateKeyPath: "keys/"
     Endpoint: "minio:9000"
     ForcePathStyle: true
+    DisableSSL: true # For MinIO
 
 # Mail service configuration (types: mock or mailgun)
 MailService:
