Update PostgreSQL client installation in CI workflow: Replace netcat with netcat-openbsd

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: Insert test data
         run: |
           # Install PostgreSQL client and netcat
-          sudo apt-get update && sudo apt-get install -y postgresql-client netcat
+          sudo apt-get update && sudo apt-get install -y postgresql-client netcat-openbsd
 
           # Insert test client data
           psql "postgres://sso_user:sso_password@localhost:5432/sso_db?sslmode=disable" -c "
