--- a/telemetry/grafana/provisioning/datasources/datasources.yaml
+++ b/telemetry/grafana/provisioning/datasources/datasources.yaml
@@ -1,7 +1,6 @@
 apiVersion: 1
 
 datasources:
-  # Prometheus - metrics
   - name: Prometheus
     type: prometheus
     access: proxy
@@ -9,14 +8,12 @@ datasources:
     isDefault: true
     editable: true
 
-  # Loki - logs
   - name: Loki
     type: loki
     access: proxy
     url: http://loki:3100
     editable: true
 
-  # Tempo - traces
   - name: Tempo
     type: tempo
     access: proxy
@@ -24,7 +21,16 @@ datasources:
     editable: true
     jsonData:
       httpMethod: GET
+      serviceMap:
+        datasourceUid: "prometheus"
       tracesToLogs:
         datasourceUid: "loki"
+        tags: ["job", "instance", "pod", "namespace"]
+        mappedTags: [{ key: "service.name", value: "service" }]
+        mapTagNamesEnabled: true
+        filterByTraceID: true
+        filterBySpanID: false
+      search:
+        hide: false
       nodeGraph:
-        enabled: false
+        enabled: true
