--- a/telemetry/loki-config.yaml
+++ b/telemetry/loki-config.yaml
@@ -38,6 +38,14 @@ schema_config:
 
 limits_config:
   allow_structured_metadata: false
+  ingestion_rate_mb: 64
+  ingestion_burst_size_mb: 128
+  max_streams_per_user: 100000
+  max_line_size: 1048576
+  max_entries_limit_per_query: 100000
+  max_global_streams_per_user: 100000
+  per_stream_rate_limit: 32MB
+  per_stream_rate_limit_burst: 64MB
 
 ruler:
   alertmanager_url: http://localhost:9093
