--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -7,7 +7,8 @@ App:
   ServiceName: "sso"
   ServiceVersion: "1.0.0"
   EnableMetrics: true
-  OTLPEndpoint: "http://localhost:4317"
+  EnableTracing: true
+  OTLPEndpoint: "localhost:4317"
   OTLPTransportType: "grpc"
 
 # gRPC Server settings
