--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       loki:
         condition: service_healthy
       otel-collector:
-        condition: service_started
+        condition: service_healthy
     environment:
       CONFIG_PATH: /app/config.yaml
     volumes:
@@ -248,6 +248,20 @@ services:
         condition: service_healthy
       prometheus:
         condition: service_healthy
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:13133",
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
 
   grafana:
     image: grafana/grafana:12.0.2
