fix: Standardize command formatting in Docker Compose files
Refactor the command section in both docker-compose.ci.yaml and docker-compose.yaml to improve readability by using a multi-line format. This change maintains the existing PostgreSQL configuration for max_connections and shared_buffers.

--- a/docker-compose.ci.yaml
+++ b/docker-compose.ci.yaml
@@ -7,6 +7,8 @@ services:
       POSTGRES_DB: sso_db
       POSTGRES_USER: sso_user
       POSTGRES_PASSWORD: sso_password
+    command:
+      ["postgres", "-c", "max_connections=200", "-c", "shared_buffers=256MB"]
     ports:
       - "5432:5432"
     healthcheck:
