--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,7 +67,8 @@ services:
       POSTGRES_USER: sso_user
       POSTGRES_PASSWORD: sso_password
       POSTGRES_DB: sso_db
-    command: ["postgres", "-c", "max_connections=200", "-c", "shared_buffers=256MB"]
+    command:
+      ["postgres", "-c", "max_connections=200", "-c", "shared_buffers=256MB"]
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
